[metadata]
# replace with your username:
name = pyFTree
version = 0.1
author = Waqar Ahmed
author_email = ahmedwaqardr@gmail.com
description = A python based FTA tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahmedwaqar/pyFTreetool
project_urls =
    Bug Tracker = https://github.com/ahmedwaqar/pyFTreetool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
